polish answer
Signed-off-by: yuanshenjian <yuanshenjian@foxmail.com>